<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_questions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mdpa.lasalle.quiz.QuestionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberQuestionsText"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:text="@string/question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questionTextView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textStyle="normal|bold"
        android:textSize="24sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answersRadioGroup">

        <RadioButton
            android:text="@string/answer11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer1RadioButton"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:text="@string/answer12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer2RadioButton" />

        <RadioButton
            android:text="@string/answer13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer3RadioButton" />

        <RadioButton
            android:text="@string/answer14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/answer4RadioButton" />

    </RadioGroup>

    <Button
        android:text="@string/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGreenQuiz"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
