<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mdpa.lasalle.quiz.ResultsActivity">

    <TextView
        android:text="@string/your_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/total_questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:layout_weight="1" />

            <TextView
                android:text="@string/correct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="@string/incorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textSize="14sp"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/totalNumQuestionsText"
                android:gravity="center_horizontal" />

            <TextView
                android:text="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/correctQuestionsText"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp" />

            <TextView
                android:text="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/incorrectQuestionsText"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tryAgainButton"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@color/colorGreenQuiz"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />
</LinearLayout>
